--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Nordic_SDKs"]
-	path = Nordic_SDKs
-	url = https://github.com/evanhumon/Nordic_SDKs.git
+	path = NordicSDKs
+	url = https://github.com/evan-dp/NordicSDKs.git
